# ci-testing

./: .copier-answers.yml  CMakeLists.txt  LICENSE  README.md  conanfile.py  vcpkg.json
.github/actions/: conan-cache.yml
.github/actions/conan-cache/: action.yml
.github/workflows/: build-and-test.yml  coverage.yml
cmake/: ci_testing_add_uts.cmake  ci_testing_conan.cmake  ci_testing_coverage.cmake  ci_testing_iwyu.cmake  ci_testing_settings.cmake  map.imp  my_proj_add_uts.cmake  my_project_add_uts.cmake  my_project_conan.cmake  my_project_settings.cmake  my_project_warnings.cmake
conan/: conanfile.py
source/: CMakeLists.txt
source/include/ci_testing/: ci_testing.hpp
source/my_proj/: CMakeLists.txt
source/my_proj/include/my_proj/: my_proj.hpp
source/my_proj/src/: main.cpp  my_proj.cpp
source/my_proj/tests/: my_proj_test.cpp
source/my_project/: CMakeLists.txt
source/my_project/include/my_project/: my_project.hpp
source/my_project/src/: main.cpp  my_project.cpp
source/my_project/tests/: my_project_test.cpp
source/tests/: ci_testing_test.cpp
wint_test/: .copier-answers.yml  CMakeLists.txt  README.md
wint_test/cmake/: my_proj_add_uts.cmake  my_proj_settings.cmake
wint_test/conan/: conanfile.py
wint_test/source/: CMakeLists.txt
wint_test/source/my_proj/: CMakeLists.txt
wint_test/source/my_proj/include/my_proj/: my_proj.hpp
wint_test/source/my_proj/tests/: my_proj_test.cpp
